cabal-version:       >= 1.10
name:                vulcan
version:             0.1.0.0
synopsis:            Merge request validation assistant
description:
  An assistant for validating merge requests with submodules forward.
bug-reports:         https://github.com/TheLusitanianKing/Vulcan/issues
license:             MIT
license-file:        LICENSE
author:              The Lusitanian King
maintainer:          alexlusitanian@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable vulcan
  main-is:          Main.hs
  other-modules:    Alias,
                    API,
                    Commit,
                    Config,
                    MergeRequest,
                    Project
  build-depends:    base >= 4.13 && < 4.14,
                    regex-pcre >= 0.95,
                    gitlab-haskell >= 0.2.5,
                    text >= 1.2.4
  hs-source-dirs:   src
  default-language: Haskell2010